Header fixed, all headings styled,services added, form spacing and button styled

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,8 @@ header{
 }
 
 #nav{
-    padding-left:10px;
+    padding-left:30px;
+    margin-left:20px;
 }
 /*--------------------Main Image----------------*/
 
@@ -158,7 +159,10 @@ header{
 /*--------------------Section----------------*/
 .testimonials{
     font-family:"Roboto", sans-serif;
-    border: 2px solid #525252;
+    background-color:rgba(241, 121, 9, 0.603);
+    width:300px;
+    height:250px;
+    border-radius:50%;
     padding-top:20px;
     margin-top:20px;
     text-align:center;
@@ -181,12 +185,33 @@ header{
 }
 
 .about-us-heading{
-    text-align: center;
+       text-align:center;
+    text-transform:uppercase;
+    margin-bottom:15px;
+    font-family:'Alfa Slab One';
+    color:rgb(241, 121, 9);
+    font-size:35px;
+    text-shadow: 10px 10px 16px grey;
+    margin-top:15px;
+
 }
+
+.testimonials{
+    padding:30px;
+    height:100%;
+}
+
 .testimonials-heading{
     text-align:center;
     display:block;
 } 
+
+.testimonials p{
+    margin-left:20px;
+    margin-right:20px;
+    padding-left:10px;
+    padding-right:10px;
+}
 
 
 
@@ -196,9 +221,20 @@ header{
 
 /*--------------------Services----------------*/
 section{
-    padding-top:30px;
+    padding-top:5px;
     padding-bottom:30px;
     padding-left:10px;
+
+}
+
+.heading-services{
+    text-align:center;
+    text-transform:uppercase;
+    margin-bottom:15px;
+    font-family:'Alfa Slab One';
+    color:rgb(241, 121, 9);
+    font-size:35px;
+    text-shadow: 10px 10px 16px grey;
 
 }
 
@@ -209,7 +245,7 @@ section{
     padding:0px;
     box-shadow: 10px 10px 5px grey;
     margin-bottom:20px;
-    margin-left:30px;
+    margin-left:52px;
     margin-right:30px;
     margin-top:20px;
     background-color:#777a7d;
@@ -245,15 +281,20 @@ section{
     /*--------------------Form----------------*/
 
 .contact-heading {
-    font-family:"Exo", sans-serif;
-    font-weight: 300;
-    margin-top:25px;
-    margin-bottom:20px;
+    text-align:center;
+    text-transform:uppercase;
+    margin-top:10px;
+    margin-bottom:15px;
+    font-family:'Alfa Slab One';
+    color:rgb(241, 121, 9);
+    font-size:35px;
+    text-shadow: 10px 10px 16px grey;
 }
 .center-form{
     padding-top:10px;
     margin:0 auto;
     max-width:70%;
+    padding-bottom:25px;
 
 }
 
@@ -267,6 +308,28 @@ section{
 }
 }
 
+.input-box{
+    margin-top:5px;
+}
+
+.button{
+    text-transform:uppercase;
+    background-color:rgb(241, 121, 9);
+    color:#585655;
+    font-weight:700;
+    border:rgb(241, 121, 9);
+}
+
+.submit-button{
+    margin-top:10px;
+}
+
+.button:hover{
+    background-color:#585655;
+    color:rgb(241, 121, 9);
+
+}
+
 
 
 
@@ -274,7 +337,7 @@ section{
 /*--------------------Footer----------------*/
 
 footer{
-    background-color: #525252;
+    background-color: #777a7d;
     color:#fafafa;
     min-height:120px;
     
